--- a/index.html
+++ b/index.html
@@ -2,30 +2,39 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Trivia Game</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <script src="https://code.jquery.com/jquery.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <!-- Bootstrap File -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
-
+        <title>Trivia Game</title>
+    <meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    
+	
 </head>
 <body>
 
-    
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">   
 <h1>WHO RUNS THE WORLD: GIRLS</h1>
 <h1> Trivia Game</h1)>
-<div class="wrapper">	
+</div>
+
+<div class="row">
+    <div class="col-md-12">	
  	<div id= "timeleft"></div>
 	<div id= "questionarea"></div>
 	<div id= "answerarea"></div>
 	<button class ="btn btn-success" id ="start">Start The Game</button><br>
 	<button class="btn btn-success" id="reset">Do You Want To Play Again?</button>
 </div>
-
-
+</div>
+</div>
+ 
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+ 
+<script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 </html>
 
