--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Trivia Game</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
    
     
 </head>
@@ -23,10 +23,10 @@
                    
                     </div>
                 </div>
-                <div class="row">
+                <div class="row" id="decorate">
                     <div class="col-md-12">
-                        <p> <br>
-                            Women Are Doing Great Things ... Take the trivia game below to test how much you know about the women who are changing the world <em></strong>
+                        <p> 
+                            Women Are Doing Great Things ... Take the trivia game below to test how much you know about some of the women who are changing the world <em></strong>
                     </div>
                 </div>
                 <div class="row">
@@ -44,8 +44,8 @@
                 </div>
             </div>
  
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+<script	src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script type="text/javascript" src="assets/javascript/app.js"></script>
 </body>
 </html>
